--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,15 +58,16 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  window.addEventListener('keydown', function(e) {
-    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
-    console.log(key);
-    if (!audio) return;
-    audio.currentTime = 0;
-    audio.play();
-    key.classList.add(`playing`);
-  });
+
+function playSound(e) {
+  const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+  const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+  console.log(key);
+  if (!audio) return;
+  audio.currentTime = 0;
+  audio.play();
+  key.classList.add(`playing`);
+};
 
 function removeTransition(e) {
   if (e.propertyName !== 'transform') return;
@@ -76,6 +77,7 @@ function removeTransition(e) {
 const keys = document.querySelectorAll('.key');
 keys.forEach(key => key.addEventListener('transitionend', removeTransition));
 
+window.addEventListener('keydown', playSound);
 </script>
 
 
